tests/baselines/reference/moduleExportDuplicateAlias.errors.txt
tests/cases/conformance/salsa/moduleExportAliasDuplicateAlias.js(1,9): error TS2300: Duplicate identifier 'apply'.
tests/cases/conformance/salsa/moduleExportAliasDuplicateAlias.js(3,1): error TS2322: Type '() => void' is not assignable to type 'undefined'.
tests/cases/conformance/salsa/moduleExportAliasDuplicateAlias.js(3,9): error TS2300: Duplicate identifier 'apply'.


==== tests/cases/conformance/salsa/moduleExportAliasDuplicateAlias.js (3 errors) ====
    exports.apply = undefined;
            ~~~~~
!!! error TS2300: Duplicate identifier 'apply'.
    function a() { }
    exports.apply = a;
    ~~~~~~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'undefined'.
            ~~~~~
!!! error TS2300: Duplicate identifier 'apply'.
    